--- a/SocialMedia.Api/appsettings.json
+++ b/SocialMedia.Api/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConnectionSqlServer": "Server=DESKTOP-6RJ0EO8;Database=DbSocialMedia;Trusted_Connection=true;TrustServerCertificate=true;",
-    "ConnectionMySql": "Server=localhost;Port=3306;Database=DbSocialMedia;Uid=root;Pwd=Ucb.2025;"
-  },
-  "DatabaseProvider": "MySql" // Opciones: "SqlServer" o "MySql"
+    "ConnectionStrings": {
+        "ConnectionSqlServer": "Server=DESKTOP-81AUFGC\\MSSQLSERVER01;Database=DbSocialMedia;Trusted_Connection=true;TrustServerCertificate=true;",
+        "ConnectionMySql": "Server=localhost;Port=3306;Database=DbSocialMedia;Uid=root;Pwd=Ucb.2025;"
+    },
+  "DatabaseProvider": "SqlServer" // Opciones: "SqlServer" o "MySql"
 }
